sumo/tests/duarouter/alternatives/style2_input/errors/route/route_prob_empty/errors.duarouter
Error: Attribute 'probability' in definition of route(alternative) '!1' is empty.
Quitting (on error).
